--- a/4Hire/4Hire/Base.lproj/Main.storyboard
+++ b/4Hire/4Hire/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="MDT-PD-nlJ">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExperienceCell" rowHeight="44" id="IuA-cw-6I1" customClass="ExperienceTableViewCell" customModule="_Hire" customModuleProvider="target">
@@ -118,18 +118,61 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IW9-SU-1Em" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="mrn-O7-MJQ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="ZCo-eo-31Z">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Cmo-nY-288"/>
+                        <segue destination="MD6-SW-pOD" kind="relationship" relationship="rootViewController" id="FVb-Us-fKf"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jd6-SU-VVs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140.57971014492756" y="138.61607142857142"/>
+            <point key="canvasLocation" x="-1542" y="139"/>
+        </scene>
+        <!--Intro View Controller-->
+        <scene sceneID="Wjk-er-IBg">
+            <objects>
+                <viewController id="MD6-SW-pOD" customClass="IntroViewController" customModule="_Hire" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Gih-PN-9FL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4HT-Zi-rcS">
+                                <rect key="frame" x="87" y="381" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4HT-Zi-rcS" secondAttribute="height" multiplier="1:1" id="H8U-Js-hJJ"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3p0-Qd-mqT">
+                                <rect key="frame" x="154" y="678" width="106" height="30"/>
+                                <state key="normal" title="See my resume"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="WOn-cF-Ovp"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="3p0-Qd-mqT" firstAttribute="top" secondItem="4HT-Zi-rcS" secondAttribute="bottom" constant="57" id="EyH-EA-w5T"/>
+                            <constraint firstItem="4HT-Zi-rcS" firstAttribute="centerY" secondItem="Sjd-rA-ZXQ" secondAttribute="centerY" id="WeK-79-xjs"/>
+                            <constraint firstItem="3p0-Qd-mqT" firstAttribute="centerX" secondItem="4HT-Zi-rcS" secondAttribute="centerX" id="Xpe-Br-YDx"/>
+                            <constraint firstItem="4HT-Zi-rcS" firstAttribute="centerX" secondItem="Sjd-rA-ZXQ" secondAttribute="centerX" id="o8j-np-WhM"/>
+                            <constraint firstItem="4HT-Zi-rcS" firstAttribute="leading" secondItem="Sjd-rA-ZXQ" secondAttribute="leading" constant="87" id="t1x-uq-LNK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Sjd-rA-ZXQ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="vFQ-te-Fv9"/>
+                    <connections>
+                        <outlet property="avatarView" destination="4HT-Zi-rcS" id="r9z-mB-8hh"/>
+                        <outlet property="nextButton" destination="3p0-Qd-mqT" id="Vqe-bz-qL5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oPL-yh-dD1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-181" y="139"/>
         </scene>
     </scenes>
     <resources>
