Corrected intro Auto Layout.

--- a/4Hire/4Hire/Base.lproj/Main.storyboard
+++ b/4Hire/4Hire/Base.lproj/Main.storyboard
@@ -141,31 +141,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4HT-Zi-rcS">
-                                <rect key="frame" x="87" y="381" width="240" height="240"/>
+                                <rect key="frame" x="87" y="328" width="240" height="240"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="4HT-Zi-rcS" secondAttribute="height" multiplier="1:1" id="H8U-Js-hJJ"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3p0-Qd-mqT">
-                                <rect key="frame" x="154" y="678" width="106" height="30"/>
+                                <rect key="frame" x="154" y="625" width="106" height="30"/>
                                 <state key="normal" title="See my resume"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="WOn-cF-Ovp"/>
                                 </connections>
                             </button>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="rP1-Vu-V9S">
-                                <rect key="frame" x="188.5" y="482.5" width="37" height="37"/>
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
                                 <color key="color" red="0.56320457560000003" green="0.071468017940000003" blue="0.066106328229999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="rP1-Vu-V9S" firstAttribute="centerX" secondItem="Gih-PN-9FL" secondAttribute="centerX" id="45r-Jj-fcr"/>
                             <constraint firstItem="3p0-Qd-mqT" firstAttribute="top" secondItem="4HT-Zi-rcS" secondAttribute="bottom" constant="57" id="EyH-EA-w5T"/>
-                            <constraint firstItem="rP1-Vu-V9S" firstAttribute="centerY" secondItem="4HT-Zi-rcS" secondAttribute="centerY" id="H4j-4c-tPH"/>
-                            <constraint firstItem="4HT-Zi-rcS" firstAttribute="centerY" secondItem="Sjd-rA-ZXQ" secondAttribute="centerY" id="WeK-79-xjs"/>
+                            <constraint firstItem="4HT-Zi-rcS" firstAttribute="centerY" secondItem="Gih-PN-9FL" secondAttribute="centerY" id="WeK-79-xjs"/>
                             <constraint firstItem="3p0-Qd-mqT" firstAttribute="centerX" secondItem="4HT-Zi-rcS" secondAttribute="centerX" id="Xpe-Br-YDx"/>
-                            <constraint firstItem="rP1-Vu-V9S" firstAttribute="centerX" secondItem="4HT-Zi-rcS" secondAttribute="centerX" id="miy-gH-3KB"/>
                             <constraint firstItem="4HT-Zi-rcS" firstAttribute="centerX" secondItem="Sjd-rA-ZXQ" secondAttribute="centerX" id="o8j-np-WhM"/>
+                            <constraint firstItem="rP1-Vu-V9S" firstAttribute="centerY" secondItem="Gih-PN-9FL" secondAttribute="centerY" id="oSE-oQ-pul"/>
                             <constraint firstItem="4HT-Zi-rcS" firstAttribute="leading" secondItem="Sjd-rA-ZXQ" secondAttribute="leading" constant="87" id="t1x-uq-LNK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Sjd-rA-ZXQ"/>
